--- a/client-dashboard/package.json
+++ b/client-dashboard/package.json
@@ -9,10 +9,13 @@
     "antd": "^5.1.7",
     "chart.js": "^4.2.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
